--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <nav>
       <a href="#">Home</a>
       <a href="https://t.me/+c6TEu_qhxTAzZDM1">Testimoni</a>
-      <a href="https://shopee.com.my/mamaaryan12?categoryId=100014&entryPoint=ShopByPDP&itemId=7877946314">Link Pembelian</a>
+      <a href="https://s.shopee.com.my/4q26bS9qiv">Link Pembelian</a>
     </nav>
   </header>
 
